# KeepLiveService

./: .gitignore  README.md  gradle.properties  proguard-dictionary.txt
app/: build.gradle.kts
app/src/main/java/com/google/services/: MainActivity.kt  MyApp.kt
app/src/main/java/com/google/services/ui/theme/: Color.kt  Theme.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_monochrome.xml  ic_notification.xml
app/src/main/res/values/: strings.xml
framework/: build.gradle.kts
framework/src/main/: AndroidManifest.xml
framework/src/main/cpp/: CMakeLists.txt
framework/src/main/java/com/service/framework/: Fw.kt
framework/src/main/java/com/service/framework/core/: FwConfig.kt
framework/src/main/java/com/service/framework/receiver/: BluetoothReceiver.kt  SystemEventReceiver.kt
framework/src/main/java/com/service/framework/service/: DaemonService.kt  FwForegroundService.kt
framework/src/main/res/drawable/: ic_account.xml
framework/src/main/res/xml/: authenticator.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
